--- a/app/views/photo/index.html.erb
+++ b/app/views/photo/index.html.erb
@@ -1,18 +1,26 @@
 <html>
 <head>
   <title>Photosite</title>
+  <style>
+    .header {
+      text-align: center;
+      background: #1abc9c;
+      color: white;
+      font-size: 30px;
+    }
+  </style>
 </head>
 
 <body bgcolor="#E6E6FA">
 <div style="color:#696969">
   <h1><center>Photosite</center></h1>
-  <center>User Photo Page</center>
+  <h2 align="center";>User Photo Page</h2>
 </div>
-  <h1 align="center">Photos of <%= @user.first_name %> <%= @user.last_name %></h1>
+  <h1 align="center" class="header">Photos of <%= @user.first_name %> <%= @user.last_name %></h1>
 <% @photos.each do |photo| %>
     <div align="center">
       <%= image_tag("/assets/#{photo.file_name}") %>
-      <p> Photo Created At <%= photo.date_time %></p>
+      <p> <b>Photo Created At</b> <%= photo.date_time %></p>
         <% @comments.where("photo_id=?",photo.id).each do |comment| %>
         <p> <b>Comment:</b> <%= comment.comment_text %></p>
         <p><b> Comment Created at: </b><%= comment.date_time %></p>
